data/collection/fixes/descriptions/kotlin/KT-39669
The following code
```kotlin
fun launch(block: () -> Unit) {}

fun <T> run(block: () -> T): T = block()

fun test() {
  launch {
    run<Nothing> { TODO("") }
  }
}
```
fails with
```
test.kt:7:18: error: type mismatch: inferred type is Unit but Nothing was expected
    run<Nothing> { TODO("") }
                 ^
```
when using new inference, but compiles without errors with old inference.